replace new Integer() by Integer.valueOf() cause it's faster